--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "gis_module"]
 	path = gis_module
 	url = https://github.com/Emb3rs-Project/p-gis.git
+[submodule "business_module"]
+	path = business_module
+	url = https://github.com/Emb3rs-Project/p-business.git
+[submodule "market_module"]
+	path = market_module
+	url = https://github.com/Emb3rs-Project/p-market.git
+[submodule "teo_module"]
+	path = teo_module
+	url = https://github.com/Emb3rs-Project/p-teo.git
