Update submodules and mappings

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "teo_module"]
 	path = teo_module
 	url = https://github.com/Emb3rs-Project/p-teo.git
+[submodule "cf_module"]
+	path = cf_module
+	url = https://github.com/Emb3rs-Project/p-core-functionalities.git
